--- a/french-app/Pages/VocabularyWeekPage.razor
+++ b/french-app/Pages/VocabularyWeekPage.razor
@@ -13,8 +13,8 @@
         </div>
 
         <div class="d-flex gap-2">
-            <a class="btn btn-outline-secondary" href="/vocabulary">Back</a>
-            <a class="btn btn-primary" href="/vocabulary/study/@WeekId">Study this week</a>
+            <a class="btn btn-outline-secondary" href="vocabulary">Back</a>
+            <a class="btn btn-primary" href="vocabulary/study/@WeekId">Study this week</a>
         </div>
     </div>
 
