--- a/french-app/Pages/StudySession.razor
+++ b/french-app/Pages/StudySession.razor
@@ -13,7 +13,7 @@
         </div>
 
         <div class="d-flex gap-2">
-            <a class="btn btn-outline-secondary" href="/vocabulary/study">Change</a>
+            <a class="btn btn-outline-secondary" href="vocabulary/study">Change</a>
             <button class="btn btn-outline-primary" @onclick="Shuffle" disabled="@(_terms.Count == 0)">Shuffle</button>
         </div>
     </div>
