--- a/french-app/Layout/NavMenu.razor
+++ b/french-app/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Study
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="about">
+                <span class="bi bi-info-circle-fill-nav-menu" aria-hidden="true"></span> About
+            </NavLink>
+        </div>
     </nav>
 </div>
 
