--- a/french-app/Pages/Home.razor
+++ b/french-app/Pages/Home.razor
@@ -9,4 +9,5 @@
 <div class="d-flex gap-2 flex-wrap">
     <a class="btn btn-primary" href="vocabulary">Browse weeks</a>
     <a class="btn btn-outline-primary" href="vocabulary/study">Start studying</a>
+    <a class="btn btn-outline-secondary" href="about">About</a>
 </div>
