--- a/french-app/Layout/NavMenu.razor
+++ b/french-app/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="vocabulary/match">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Match
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="about">
                 <span class="bi bi-info-circle-fill-nav-menu" aria-hidden="true"></span> About
             </NavLink>
