--- a/french-app/Layout/NavMenu.razor
+++ b/french-app/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">french-app</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -11,27 +12,27 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="vocabulary">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Vocabulary
+                <span class="bi bi-book" aria-hidden="true"></span> Vocabulary
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="vocabulary/study">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Study
+                <span class="bi bi-journal-text" aria-hidden="true"></span> Study
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="vocabulary/match">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Match
+                <span class="bi bi-lightning-charge" aria-hidden="true"></span> Match
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="about">
-                <span class="bi bi-info-circle-fill-nav-menu" aria-hidden="true"></span> About
+                <span class="bi bi-info-circle" aria-hidden="true"></span> About
             </NavLink>
         </div>
     </nav>
